# Ur5e-eye-hand-calibration

./: add_wrist_camera_frame.py  camera.xml  getCameraIntri.py  get_pose_and_image.py  pose_fPe_1.yaml  pose_fPe_2.yaml  pose_fPe_5.yaml  pose_fPe_6.yaml  pose_fPe_7.yaml  pose_fPe_8.yaml  readme.txt  test.py
calibration/: CMakeLists.txt  convertAngle.cpp  get-chessboard-pose.cpp
